# xdwlib

./: .gitignore  LICENSE  LICENSE.rst  MANIFEST  MANIFEST.in  README  README.rst  __init__.py  annotation.py  cx_setup.py  document.py  page.py  setup.cfg  setup.py  setup.py2exe.py  sfx2xdw.py  xdw2text.bat  xdw2text.py  xdwapi.py  xdwconst.py  xdwerror.py  xdwlib.py  xdwobserver.py  xdwstruct.py  xdwtimezone.py
docs/: annotation.rst  basedocument.rst  binder.rst  conf.py  cx_setup.rst  derivativepath.rst  document.rst  documentinbinder.rst  faq.rst  fonts.rst  howto.rst  index.rst  modules.rst  page.rst  samples.rst  struct.rst  whatsthis.rst  xdw2text.rst  xdwfile.rst  xdwlib.rst
docs/_build/doctrees/: annotatable.doctree  annotation.doctree  basedocument.doctree  binder.doctree  colors.doctree  derivativepath.doctree  document.doctree  documentinbinder.doctree  environment.pickle  faq.doctree  fonts.doctree  halfopenregion.doctree  howto.doctree  index.doctree  modules.doctree  overview.doctree  page.doctree  samples.doctree  struct.doctree  whatsthis.doctree  xdwfile.doctree  xdwlib.doctree  xdwtemp.doctree
docs/_build/html/: .buildinfo  annotatable.html  annotation.html  basedocument.html  binder.html  colors.html  derivativepath.html  document.html  documentinbinder.html  faq.html  fonts.html  genindex.html  halfopenregion.html  howto.html  index.html  modules.html  objects.inv  overview.html  page.html  py-modindex.html  samples.html  search.html  searchindex.js  struct.html  whatsthis.html  xdwfile.html  xdwlib.html  xdwtemp.html
docs/_build/html/_sources/: annotatable.rst.txt  colors.rst.txt  document.rst.txt  documentinbinder.rst.txt  halfopenregion.rst.txt  howto.rst.txt  index.rst.txt  overview.rst.txt  samples.rst.txt  whatsthis.rst.txt  xdwlib.rst.txt  xdwtemp.rst.txt
docs/_build/html/_static/: language_data.js  (+1 more)
scripts/: xdw2text.py
xdwlib/: README  __blank__.xdw  __init__.py  __setup__.py  annotatable.py  annotation.py  basedocument.py  binder.py  bitmap.py  common.py  document.py  documentinbinder.py  observer.py  page.py  struct.py  timezone.py  xdwapi.py  xdwfile.py  xdwtemp.py
