[metadata]
name = xdwlib
version = attr:xdwlib.__setup__.__version__
url = https://github.com/hayasix/xdwlib
author = attr:xdwlib.__setup__.__author__
author_email = attr: xdwlib.__setup__.__email__
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: Zope Public License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business
    Topic :: Documentation
license = attr:xdwlib.__setup__.__license__
description = A DocuWorks library.
long_description = file:README.rst, LICENSE
platforms = win32

[options]
zip_safe = False
include_package_data = True
#install_requires = pillow>=3.3.3
python_requires = >=3.7
scripts =
    scripts/xdw2text.py
packages = xdwlib

[sdist]
formats = zip
